<resources>
    <string name="app_name">NokhbaHmdPanel</string>
    <string name="logo_title">لوحة التحكم</string>
    <string name="login_title">تسجيل الدخول</string>
    <string name="user_name">اسم المستخدم</string>
    <string name="pass_word">كلمة المرور</string>
    <string name="login_text">دخول</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="help_req">طلبات المساعدة</string>
    <string name="voulenter_req">طلبات التطوع</string>
    <string name="help_info"> معلومات طلب المساعدة</string>
    <string name="voulenter_info"> معلومات عن المتطوع</string>
    <string name="champ">أحد الحقول فارغ ، يرجى التحقق من جميع الحقول مرة أخرى</string>
    <string name="errorMssg">حدث خطأ يرجى المحاولة مرة أخرى</string>
    <string name="checkConx">يرجى التحقق من اتصال الإنترنت الخاص بك من فضلك</string>
    <string name="error_login">كلمة المرور أو اسم المستخدم غير الصحيح</string>
    <string name="notification_screen">إرسال إشعار</string>
    <string name="notification_title">عنوان الإشعار</string>
    <string name="notification_msg">محتوى اللإشعار</string>
    <string name="notification_send">ارسال</string>
    <string name="notSend">"لم يتم ارسال الإشعارتحقق من الإنترنت الخاص بك"</string>
    <string name="send">تم ارسال الإشعار بنجاح</string>
    <string name="ok">موافق</string>
    <!-- Notification-->
    <string name="channal_id">panel</string>
    <string name="channal_dsc">Demande service</string>
    <string name="channal_nom">Demande service Notification</string>
    <string name="title_activity_map_screen">Map</string>
</resources>