<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/n_background"
    tools:context=".LoginScreen"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="50dp"
        android:layout_marginBottom="20dp"
        android:layout_alignParentBottom="true"
        android:gravity="center">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/cairo_black"
            android:textSize="28sp"
            android:layout_marginBottom="10dp"
            android:text="@string/login_title"/>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:startIconDrawable="@drawable/ic_baseline_person_24"
            app:startIconTint="@color/green"
            app:boxCornerRadiusTopStart="16dp"
            app:boxCornerRadiusTopEnd="16dp"
            app:boxStrokeColor="@color/black"
            app:boxStrokeWidthFocused="1dp"
            android:hint="@string/user_name"
            android:background="@color/white"
            app:endIconMode="clear_text"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="text" />

        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:startIconDrawable="@drawable/ic_baseline_lock_24"
            app:startIconTint="@color/green"
            app:boxCornerRadiusTopStart="16dp"
            app:boxCornerRadiusTopEnd="16dp"
            app:boxStrokeColor="@color/black"
            app:boxStrokeWidthFocused="1dp"
            app:passwordToggleEnabled="true"
            android:hint="@string/pass_word"
            android:background="@color/white"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textPassword" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/login_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:fontFamily="@font/cairo_black"
            android:text="@string/login_text"
            android:textSize="18sp" />
    </LinearLayout>



</RelativeLayout>