<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/not_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".NotificationScreen">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:background="@color/white"
        android:elevation="5dp"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:gravity="center|left"
        android:orientation="horizontal"
        android:padding="10dp">

        <ImageView
            android:id="@+id/back_arrow"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginRight="10dp"
            android:background="?attr/selectableItemBackground"
            android:src="@drawable/ic_baseline_arrow_back_24" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/cairo_black"
            android:text="@string/notification_screen"
            android:textSize="18sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/vlinear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:orientation="vertical"
        android:padding="20dp">

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="top|right"
            android:hint="@string/notification_title"
            app:boxStrokeColor="@color/black"
            app:boxStrokeWidthFocused="2dp"
            app:endIconMode="clear_text"
            app:startIconDrawable="@drawable/ic_baseline_title_24"
            app:startIconTint="@color/green">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/not_title"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="right"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            app:boxStrokeColor="@color/black"
            app:boxStrokeWidthFocused="2dp"
            app:endIconMode="clear_text"
            app:startIconDrawable="@drawable/ic_baseline_textsms_24"
            app:startIconTint="@color/green">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/not_msg"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="right"
                android:hint="@string/notification_msg"
                android:inputType="textMultiLine"
                android:scrollbars="vertical"
                android:overScrollMode="always"
                android:scrollbarStyle="insideInset"
                android:verticalScrollbarPosition="left" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/not_send"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="@drawable/round_layout_gris"
            android:drawableEnd="@drawable/ic_baseline_send_24"
            android:drawableRight="@drawable/ic_baseline_send_24"
            android:fontFamily="@font/cairo_black"
            android:text="@string/notification_send"
            android:textColor="@color/white"
            android:textSize="20sp" />
    </LinearLayout>


</LinearLayout>